--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <head>
     <title>Some Random University</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 </head>
-<body>
+<body style="background-color: #FBEAEB;">
     <header>
         <nav class="top1">
             <div>
                 <ul class="top1nav">
                     <li>
-                        <i class="icon-phone"></i> Helpline: +91 073* ******9
+                        <i class="icon-phone"></i> +91 073* ******9
                     </li>
-                    <li><i class="icon-envelope-alt"></i> Mail: info@randomuniv**.ac.in</li>
+                    <li><i class="icon-envelope-alt"></i> info@randomuniv**.ac.in</li>
                 </ul>
             </div>
         </nav>
