--- a/index.html
+++ b/index.html
@@ -10,13 +10,48 @@
         <nav class="top1">
             <div>
                 <ul class="top1nav">
-                    <li>
-                        <i class="icon-phone"></i> +91 073* ******9
-                    </li>
+                    <li><i class="icon-phone"></i> +91 073* ******9</li>
                     <li><i class="icon-envelope-alt"></i> info@randomuniv**.ac.in</li>
                 </ul>
             </div>
         </nav>
     </header>
+    <footer>
+        <section class="footer" >
+        <Div class="ftrsec1">
+            <p>Contact: +91 073* ******9</p>
+            <p>Address:  x Street, Y area, Z city, Virtual State, India - 123456</p>
+        </Div>
+
+        <div class="ftrsec2">
+            <h4>Links</h4>
+            <ul>
+                <li><a href="">Home</a> </li>
+                <li><a href="">Academics</a> </li>
+                <li><a href="">Co-Curricular</a> </li>
+                <li><a href="">Student</a> </li>
+                <li><a href="">Contact Us</a> </li>
+            </ul>
+        </div>
+
+        <div class="ftrsec3">
+            <h4>Others</h4>
+            <ul>
+                <li><a href=""> AntiRagging Cell</a></li>
+                <li><a href=""> Entrepreneurship Development Cell</a></li>
+                <li><a href="">Training and Placement Cell</a></li>
+                <li><a href="">Technical Community</a></li>
+                <li><a href="">Student Creativity and Cultural Community</a></li>
+                <li><a href="">Grievance</a></li>
+                <li><a href="">Addmission</a></li>
+                <li><a href="">Academic Calender</a></li>
+
+
+            </ul>
+
+        </div>
+    </section>
+    </footer>
+
 </body>
 </html>
