--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <head>
     <title>Some Random University</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-    <script src="js/bootstrap.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.css">
+  <script src="js/jquery.js"></script>
+  <script src="js/bootstrap.js"></script>
 
 
 </head>
@@ -22,12 +21,17 @@
             </div>
         </nav>
     </header>
-    <section>
+    <section style="background-color: black;">
       <div id="carousel" class="carousel slide" data-ride="carousel">
         <!-- The slideshow -->
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="img/hero1.jpg" alt="Los Angeles">
+            <div class="carousel-caption">
+              <h1>Change Your Mind</h1>
+            <p>Change Your Dream</p>
+            </div>
+            
           </div>
           <div class="carousel-item">
             <img src="img/hero2.jpg" alt="Chicago">
@@ -47,6 +51,7 @@
     <footer class="footer">
         <section class="footer" >
         <Div class="ftrsec1">
+          <img src="img/logo.png" class="ftrlogo">
             <p>Contact: +91 073* ******9</p>
             <p>Address:  x Street, Y area, Z city, Virtual State, India - 123456</p>
         </Div>
@@ -54,7 +59,7 @@
         <div class="ftrsec2">
             <h4>Links</h4>
             <ul>
-                <li><a href="">Home</a> </li>
+                <li><a href="index.html">Home</a> </li>
                 <li><a href="">Academics</a> </li>
                 <li><a href="">Co-Curricular</a> </li>
                 <li><a href="">Student</a> </li>
