--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
         </nav>
     </header>
-    <section style="background-color: black;">
+    <section class="sec1">
       <div id="carousel" class="carousel slide" data-ride="carousel">
         <!-- The slideshow -->
         <div class="carousel-inner">
@@ -48,6 +48,10 @@
       
       </div>
     </section>
+    <section class="sec2">
+
+    </section>
+
     <footer class="footer">
         <section class="footer" >
         <Div class="ftrsec1">
