--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
         </nav>
     </header>
-    <section class="sec1">
+    <section class="homesec1">
       <div id="carousel" class="carousel slide" data-ride="carousel">
         <!-- The slideshow -->
         <div class="carousel-inner">
@@ -48,10 +48,36 @@
       
       </div>
     </section>
-    <section class="sec2">
+    <section class="homesec2">
 
     </section>
+    <section class="homesec3">
+      <div class="postgallery"> 
+        <img src="#">
+        <h3>Engineering</h3>
+      </div>
+      <div class="postgallery"> 
+        <img src="#">
+        <h3>Management Studies</h3>
+      </div>
+      <div class="postgallery"> 
+        <img src="#">
+        <h3>Commerce</h3>
+      </div>
+      <div class="postgallery"> 
+        <img src="#">
+        <h3>Arts & Humanities</h3>
+      </div>
+      <div class="postgallery"> 
+        <img src="#">
+        <h3>Science</h3>
+      </div>
+      <div class="postgallery"> 
+        <img src="#">
+        <h3>Agriculture</h3>
+      </div>
 
+    </section>
     <footer class="footer">
         <section class="footer" >
         <Div class="ftrsec1">
