--- a/index.html
+++ b/index.html
@@ -12,13 +12,42 @@
 </head>
 <body>
     <header>
-        <nav class="top1">
+        <!-- <nav class="top1">
             <div>
                 <ul class="top1nav">
                     <li><i class="icon-phone"></i> +91 073* ******9</li>
                     <li><i class="icon-envelope-alt"></i> info@randomuniv**.ac.in</li>
                 </ul>
             </div>
+        </nav> -->
+        <nav>
+          <p>institute</p>
+          <ul>
+            <li><a href="#">Home</a>
+              <ul>
+                <li><a href="#">dropdown1</a></li>
+                <li><a href="#">dropdown2</a></li>
+                <li><a href="#">dropdown3</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Portfolio</a>
+              <ul>
+                <li><a href="#">dropdown1</a></li>
+                <li><a href="#">dropdown2</a></li>
+                <li><a href="#">dropdown3</a></li>
+              </ul>
+            </li>
+            <li><a href="#">About us</a>
+              <ul>
+                <li><a href="#">dropdown1</a></li>
+                <li><a href="#">dropdown2</a></li>
+                <li><a href="#">dropdown3</a></li>
+              </ul>
+            </li>
+            <li><a href="#">contact us</a></li>
+
+            
+          </ul>
         </nav>
     </header>
     <section class="homesec1">
