--- a/index.html
+++ b/index.html
@@ -23,28 +23,28 @@
         <nav>
           <p>institute</p>
           <ul>
-            <li><a href="#">Home</a>
-              <ul>
+            <li class="headdrop1"><a href="#">Home</a>
+              <ul class="dropitem">
                 <li><a href="#">dropdown1</a></li>
                 <li><a href="#">dropdown2</a></li>
                 <li><a href="#">dropdown3</a></li>
               </ul>
             </li>
-            <li><a href="#">Portfolio</a>
-              <ul>
+            <li class="headdrop2"><a href="#">Portfolio</a>
+              <ul class="dropitem">
                 <li><a href="#">dropdown1</a></li>
                 <li><a href="#">dropdown2</a></li>
                 <li><a href="#">dropdown3</a></li>
               </ul>
             </li>
-            <li><a href="#">About us</a>
-              <ul>
+            <li class="headdrop3"><a href="#">About us</a>
+              <ul class="dropitem">
                 <li><a href="#">dropdown1</a></li>
                 <li><a href="#">dropdown2</a></li>
                 <li><a href="#">dropdown3</a></li>
               </ul>
             </li>
-            <li><a href="#">contact us</a></li>
+            <li class="headdrop4"><a href="#">contact us</a></li>
 
             
           </ul>
