--- a/index.html
+++ b/index.html
@@ -12,37 +12,37 @@
 </head>
 <body>
     <header>
-        <!-- <nav class="top1">
+        <nav class="top1">
             <div>
                 <ul class="top1nav">
                     <li><i class="icon-phone"></i> +91 073* ******9</li>
                     <li><i class="icon-envelope-alt"></i> info@randomuniv**.ac.in</li>
                 </ul>
             </div>
-        </nav> -->
-        <nav>
+        </nav>
+        <nav class="top2">
           <p>institute</p>
           <ul>
             <li class="headdrop1"><a href="#">Home</a>
-              <ul class="dropitem">
-                <li><a href="#">dropdown1</a></li>
-                <li><a href="#">dropdown2</a></li>
-                <li><a href="#">dropdown3</a></li>
-              </ul>
+              <div class="dropitem">
+                <a href="#">dropdown1</a>
+                <a href="#">dropdown2</a>
+                <a href="#">dropdown3</a>
+              </div>
             </li>
             <li class="headdrop2"><a href="#">Portfolio</a>
-              <ul class="dropitem">
-                <li><a href="#">dropdown1</a></li>
-                <li><a href="#">dropdown2</a></li>
-                <li><a href="#">dropdown3</a></li>
-              </ul>
+              <div class="dropitem">
+                <a href="#">dropdown1</a>
+                <a href="#">dropdown2</a>
+                <a href="#">dropdown3</a>
+              </div>
             </li>
             <li class="headdrop3"><a href="#">About us</a>
-              <ul class="dropitem">
-                <li><a href="#">dropdown1</a></li>
-                <li><a href="#">dropdown2</a></li>
-                <li><a href="#">dropdown3</a></li>
-              </ul>
+              <div class="dropitem">
+                <a href="#">dropdown1</a>
+                <a href="#">dropdown2</a>
+                <a href="#">dropdown3</a>
+              </div>
             </li>
             <li class="headdrop4"><a href="#">contact us</a></li>
 
