--- a/index.html
+++ b/index.html
@@ -77,6 +77,21 @@
       
       </div>
     </section>
+    <section class="info">
+      <div class="container" id="box">
+        <h2>We Welcome You To</h2>
+
+        <h1> Random University</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi pariatur quis rerum vitae mollitia asperiores, et, dolore repellendus eum voluptatem, ad veritatis dicta nam labore non minus officia facilis exercitationem!
+          Iste quod, reiciendis dolore repellat ad rem autem aut! Sequi autem, ullam, maiores fugit saepe recusandae vel architecto impedit deserunt necessitatibus assumenda? Dignissimos, natus. Pariatur deleniti explicabo debitis amet assumenda.
+          Iure est blanditiis a doloribus distinctio dignissimos cum quo rem nobis minus sint atque, eveniet sit accusantium hic. Porro aperiam consequatur quisquam non quam asperiores error voluptate ea ipsam voluptatibus!
+          Error unde magni veniam voluptatibus sunt eveniet at aperiam esse minus asperiores dignissimos, impedit laborum ipsa repellat facere harum optio quos maiores! Quis magnam, cum maxime totam facilis minus id.
+        </p>
+
+      </div>
+
+    </section>
     <section class="homesec2">
 
     </section>
