--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
       </div>
     </section>
     <section class="info">
+      <img src="img/1.jpg" alt="">
       <div class="container" id="box">
         <h2>We Welcome You To</h2>
 
