--- a/academics/engineering.html
+++ b/academics/engineering.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Some Random University</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
         <link href="css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
         <link href="css/font-awesome.css" rel="stylesheet">
         <link rel="stylesheet" href="css/bootstrap.css">
