--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
     </section>
     <section class="homesec3">
       <div class="postgallery"> 
-        <img src="#">
+        <img src="img/engineering.png">
         <h3>Engineering</h3>
       </div>
       <div class="postgallery"> 
-        <img src="#">
+        <img src="img/management.png">
         <h3>Management Studies</h3>
       </div>
       <div class="postgallery"> 
-        <img src="#">
+        <img src="img/commerce.png">
         <h3>Commerce</h3>
       </div>
       <div class="postgallery"> 
