--- a/academics/courses/under graduate/ucourses.html
+++ b/academics/courses/under graduate/ucourses.html
@@ -53,6 +53,44 @@
         <div class="coursescontainer" id="coursesbox">
           <h2>B.Tech</h2>
           <hr>
+          <br>
+          <details>
+            <summary>Seats
+              
+            </summary>
+            <table>
+              <tr>
+                <th>Branch</th>
+                <th class="durationrow">Duration</th>
+                <th>Seats</th>
+              </tr>
+              <tr>
+                <td>Computer Science Engineering</td>
+                <td class="durationrow">4 Years</td>
+                <td>240 Seats</td>
+              </tr>
+              <tr>
+                <td>Civil Engineering</td>
+                <td class="durationrow">4 Years</td>
+                <td>60 Seats</td>
+              </tr>
+              <tr>
+                <td>Mechanical Engineering</td>
+                <td class="durationrow">4 Years</td>
+                <td>60 Seats</td>
+              </tr>
+              <tr>
+                <td>Electrical Engineering</td>
+                <td class="durationrow">4 Years</td>
+                <td>60 Seats</td>
+              </tr>
+              <tr>
+                <td>Electronics and Communication Engineering</td>
+                <td class="durationrow">4 Years</td>
+                <td>60 Seats</td>
+              </tr>
+            </table>
+          </details>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi pariatur quis rerum vitae mollitia asperiores, et, dolore repellendus eum voluptatem, ad veritatis dicta nam labore non minus officia facilis exercitationem!
             Iste quod, reiciendis dolore repellat ad rem autem aut! Sequi autem, ullam, maiores fugit saepe recusandae vel architecto impedit deserunt necessitatibus assumenda? Dignissimos, natus. Pariatur deleniti explicabo debitis amet assumenda.
@@ -74,6 +112,7 @@
           </div>
           <div class="coursescontainer" id="coursesbox">
             <h2>B.Sc</h2>
+
             <hr>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi pariatur quis rerum vitae mollitia asperiores, et, dolore repellendus eum voluptatem, ad veritatis dicta nam labore non minus officia facilis exercitationem!
