--- a/index.html
+++ b/index.html
@@ -23,28 +23,30 @@
         <nav class="top2">
           <p>institute</p>
           <ul>
-            <li class="headdrop1"><a href="#">Home</a>
+            <li><a href="#">Home</a></li>
+            <li class="headdrop"><a href="#">About</a>
+              <div class="dropitem">
+                <a href="#">Authorities</a>
+                <a href="#">Chancellor </a>
+                <a href="#">Vice Chancellor</a>
+                <a href="#">About University</a>
+              </div>
+            </li>
+            <li class="headdrop"><a href="#">Academics</a>
+              <div class="dropitem">
+                <a href="#">UnderGraduate</a>
+                <a href="#">Post Graduate</a>
+                <a href="#">PhD</a>
+              </div>
+            </li>
+            <li class="headdrop"><a href="#">About us</a>
               <div class="dropitem">
                 <a href="#">dropdown1</a>
                 <a href="#">dropdown2</a>
                 <a href="#">dropdown3</a>
               </div>
             </li>
-            <li class="headdrop2"><a href="#">Portfolio</a>
-              <div class="dropitem">
-                <a href="#">dropdown1</a>
-                <a href="#">dropdown2</a>
-                <a href="#">dropdown3</a>
-              </div>
-            </li>
-            <li class="headdrop3"><a href="#">About us</a>
-              <div class="dropitem">
-                <a href="#">dropdown1</a>
-                <a href="#">dropdown2</a>
-                <a href="#">dropdown3</a>
-              </div>
-            </li>
-            <li class="headdrop4"><a href="#">contact us</a></li>
+            <li class="headdrop"><a href="#">contact us</a></li>
 
             
           </ul>
