--- a/index.html
+++ b/index.html
@@ -104,28 +104,13 @@
 
   </section>
   <section id="partners-section">
-    <h2 class="h-primary center">Join the mailing list</h2>
-    <p>There is a lot more to learn about Random University, so let us stay in touch!
- 
-
-    </p>
-    <!-- <div id="partners">
-      <div class="partner-item">
-        <img src="img/logo.png" alt="Our Partners">
-      </div>
-      <div class="partner-item">
-        <img src="img/logo.png" alt="Our Partners">
-      </div>
-      <div class="partner-item">
-        <img src="img/logo.png" alt="Our Partners">
-      </div>
-      <div class="partner-item">
-        <img src="img/logo.png" alt="Our Partners">
-      </div>
-      <div class="partner-item">
-        <h2>Join Th</h2>
-      </div>
-    </div> -->
+    <div>
+      <h2 class="h-primary center">Join the mailing list</h2>
+    </div>
+    <div>
+      <p>There is a lot more to learn about Random University, so let us stay in touch!
+      </p>
+    </div>
   </section>
   <section class="homesec3">
     <div class="postgallery">
