--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
       <p>There is a lot more to learn about Random University, so let us stay in touch!
       </p>
     </div>
+    <div>
+      <p>
+        You can also reach us at 1.800.****.**** or App****d.****hfg
+      </p>
+    </div>
   </section>
   <section class="homesec3">
     <div class="postgallery">
