--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a href="#">PhD</a>
           </div>
         </li>
-        <li class="headdrop"><a href="#">About us</a>
+        <li class="headdrop"><a href="#">Admission</a>
           <div class="dropitem">
             <a href="#">dropdown1</a>
             <a href="#">dropdown2</a>
