--- a/aboutus/chancellor.html
+++ b/aboutus/chancellor.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <head>
     <title>Some Random University</title>
-    <link rel="stylesheet" href="../../../css/style.css">
-    <link href="../../../css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-    <link href="../../../css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../../css/bootstrap.css">
-  <script src="../../../js/jquery.js"></script>
-  <script src="../../../js/bootstrap.js"></script>
+    <link rel="stylesheet" href="../../css/style.css">
+    <link href="../../css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="../../css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../css/bootstrap.css">
+  <script src="../../js/jquery.js"></script>
+  <script src="../../js/bootstrap.js"></script>
 </head>
 <body>
     <header>
