--- a/aboutus/chancellor.html
+++ b/aboutus/chancellor.html
@@ -10,15 +10,15 @@
 </head>
 <body>
     <header>
-        <nav class="top1">
+        <div class="top1">
             <div>
                 <ul class="top1nav">
                     <li><i class="icon-phone"></i> +91 073* ******9</li>
                     <li><i class="icon-envelope-alt"></i> info@randomuniv**.ac.in</li>
                 </ul>
             </div> 
-        </nav>
-        <nav class="top2">
+        </div>
+        <div class="top2">
           <p>institute</p>
           <ul>
             <li class="headdrop1"><a href="#">Home</a>
@@ -46,7 +46,7 @@
 
             
           </ul>
-        </nav>
+        </div>
     </header>
     <section id="university-section">
         <div>
