--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
 
 <body>
   <header>
-    <nav class="top1">
+    <div class="top1">
       <div>
         <ul class="top1nav">
           <li><i class="icon-phone"></i> +91 073* ******9</li>
           <li><i class="icon-envelope-alt"></i> info@randomuniv**.ac.in</li>
         </ul>
       </div>
-    </nav>
-    <nav class="top2">
+    </div>
+    
+    <div class="top2">
       <p>institute</p>
       <ul>
         <li><a href="#">Home</a></li>
@@ -52,8 +53,9 @@
 
 
       </ul>
-    </nav>
+    </div>
   </header>
+
   <section class="homesec1">
     <div id="carousel" class="carousel slide" data-ride="carousel">
       <!-- The slideshow -->
