--- a/index.html
+++ b/index.html
@@ -8,53 +8,12 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.js"></script>
-
+  <script src="js/import.js"></script>
 
 </head>
 
 <body>
-  <header>
-    <div class="top1">
-      <div>
-        <ul class="top1nav">
-          <li><i class="icon-phone"></i> +91 073* ******9</li>
-          <li><i class="icon-envelope-alt"></i> info@randomuniv**.ac.in</li>
-        </ul>
-      </div>
-    </div>
-    
-    <div class="top2">
-      <p>institute</p>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li class="headdrop"><a href="#">About</a>
-          <div class="dropitem">
-            <a href="#">Authorities</a>
-            <a href="#">Chancellor </a>
-            <a href="#">Vice Chancellor</a>
-            <a href="#">About University</a>
-          </div>
-        </li>
-        <li class="headdrop"><a href="#">Academics</a>
-          <div class="dropitem">
-            <a href="#">UnderGraduate</a>
-            <a href="#">Post Graduate</a>
-            <a href="#">PhD</a>
-          </div>
-        </li>
-        <li class="headdrop"><a href="#">Admission</a>
-          <div class="dropitem">
-            <a href="#">dropdown1</a>
-            <a href="#">dropdown2</a>
-            <a href="#">dropdown3</a>
-          </div>
-        </li>
-        <li class="headdrop"><a href="#">contact us</a></li>
-
-
-      </ul>
-    </div>
-  </header>
+  <div data-include="header.html"></div>
 
   <section class="homesec1">
     <div id="carousel" class="carousel slide" data-ride="carousel">
@@ -146,43 +105,8 @@
     </div>
 
   </section>
-  <footer class="footer">
-    <section class="footer">
-      <Div class="ftrsec1">
-        <img src="img/logo.png" class="ftrlogo">
-        <p>Contact: +91 073* ******9</p>
-        <p>Address: x Street, Y area, Z city, Virtual State, India - 123456</p>
-      </Div>
-
-      <div class="ftrsec2">
-        <h4>Links</h4>
-        <ul>
-          <li><a href="index.html">Home</a> </li>
-          <li><a href="">Academics</a> </li>
-          <li><a href="">Co-Curricular</a> </li>
-          <li><a href="">Student</a> </li>
-          <li><a href="">Contact Us</a> </li>
-        </ul>
-      </div>
-
-      <div class="ftrsec3">
-        <h4>Others</h4>
-        <ul>
-          <li><a href=""> AntiRagging Cell</a></li>
-          <li><a href=""> Entrepreneurship Development Cell</a></li>
-          <li><a href="">Training and Placement Cell</a></li>
-          <li><a href="">Technical Community</a></li>
-          <li><a href="">Student Creativity and Cultural Community</a></li>
-          <li><a href="">Grievance</a></li>
-          <li><a href="">Addmission</a></li>
-          <li><a href="">Academic Calender</a></li>
-
-
-        </ul>
-
-      </div>
-    </section>
-  </footer>
+  
+  <div data-include="footer.html"></div>
 
 </body>
 
